# DoepkeDCTR

./: pyproject.toml
datagathering/: test.py
datagathering/Doepke/: README.md
datagathering/Doepke/DCTR/: DCTR.py
datagathering/Doepke/DCTR/FakeModbus/: __init__.py
datagathering/Doepke/DCTR/FakeModbus/client/: sync.py
datagathering/RedisWrapper/: Operations.py
tests/: test_datagathering.py
